--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- meta viewport is important for mobile view or other view than desktop for responsive web -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="responsive.css">
+<!--     <link rel="stylesheet" type="text/css" href="responsive.css"> -->
     <title>Media Query and Responsive Size</title>
 </head>
 <body>
