--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query and Responsive Size</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="responsive.css">
+<!--     <link rel="stylesheet" type="text/css" href="responsive.css"> -->
 </head>
 <body>
     <!-- FROM HERE! -->
